# auto_set_localtime_rs

./: Cargo.toml  build.rs  localtime-manifest.rc
src/: main.rs
